@@ -90,81 +90,6 @@ operator|new
 name|FrenchAnalyzer
 argument_list|()
 decl_stmt|;
-comment|// test null reader
-name|boolean
-name|iaeFlag
-init|=
-literal|false
-decl_stmt|;
-try|try
-block|{
-name|fa
-operator|.
-name|tokenStream
-argument_list|(
-literal|"dummy"
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IllegalArgumentException
-name|iae
-parameter_list|)
-block|{
-name|iaeFlag
-operator|=
-literal|true
-expr_stmt|;
-block|}
-name|assertEquals
-argument_list|(
-name|iaeFlag
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-comment|// test null fieldname
-name|iaeFlag
-operator|=
-literal|false
-expr_stmt|;
-try|try
-block|{
-name|fa
-operator|.
-name|tokenStream
-argument_list|(
-literal|null
-argument_list|,
-operator|new
-name|StringReader
-argument_list|(
-literal|"dummy"
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IllegalArgumentException
-name|iae
-parameter_list|)
-block|{
-name|iaeFlag
-operator|=
-literal|true
-expr_stmt|;
-block|}
-name|assertEquals
-argument_list|(
-name|iaeFlag
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
 name|assertAnalyzesTo
 argument_list|(
 name|fa
