@@ -41,6 +41,9 @@ Bug fixes
  * LUCENE-2001: Wordnet Syns2Index incorrectly parses synonyms that
    contain a single quote. (Parag H. Dave via Robert Muir)
 
+ * LUCENE-1359: French analyzer did not support null field names.
+   (Andrew Lynch via Robert Muir)
+
 New features
 
  * LUCENE-1924: Added BalancedSegmentMergePolicy to contrib/misc,
